# devdocs-crawler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/devdocs_crawler/: cli.py  crawler.py  utils.py
