[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devdocs-crawler"
version = "0.1.0"
authors = [
    { name = "Youssef Tharwat", email = "yousseftharwat.khalil@tharwat.com" },
]
description = "A CLI tool to crawl developer documentation sites and save pages as Markdown using crawl4ai."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
    "crawl4ai>=0.5.0,<0.6.0",
    "click>=8.0,<9.0",
    "aiofiles>=24.1.0",
    "pathvalidate>=3.2.3",
]

[project.urls]
"Homepage" = "https://github.com/youssef-tharwat/devdocs-crawler"
"Bug Tracker" = "https://github.com/youssef-tharwat/devdocs-crawler/issues"

[project.scripts]
devdocs-crawler = "devdocs_crawler.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.1", "uv>=0.1"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["devdocs_crawler"]

[tool.ruff.format]

[tool.setuptools.packages.find]
where = ["src"]
include = ["devdocs_crawler*"]
